Added check for both colors

--- a/snowflake_atomic.toolbox/Model_1_SnapShot_1590124200679/MC.cfg
+++ b/snowflake_atomic.toolbox/Model_1_SnapShot_1590124200679/MC.cfg
@@ -1,23 +1,26 @@
 \* CONSTANT definitions
 CONSTANT
-Alpha <- const_1590124655968248000
+Alpha <- const_1590124197645193000
 \* CONSTANT definitions
 CONSTANT
-K <- const_1590124655968249000
+K <- const_1590124197645194000
 \* CONSTANT definitions
 CONSTANT
-M <- const_1590124655968250000
+M <- const_1590124197645195000
 \* CONSTANT definitions
 CONSTANT
-N <- const_1590124655968251000
+N <- const_1590124197645196000
 \* CONSTANT definitions
 CONSTANT
-Beta <- const_1590124655968252000
+Beta <- const_1590124197645197000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
+\* INVARIANT definition
+INVARIANT
+Agreement
 \* PROPERTY definition
 PROPERTY
 Termination
 Progress
-\* Generated on Fri May 22 01:17:35 EDT 2020
+\* Generated on Fri May 22 01:09:57 EDT 2020
